# norg-edit

./: Cargo.toml  README.md
public/: base.css
src/: main.rs  parse.rs  utils.rs
src/components/: app.rs  auto_component.rs  buttons.rs  chrome.rs  edit_view.rs  file_view.rs  hamburger.rs  headbar.rs  menu.rs  mod.rs  quick_actions.rs
src/events/: file_chosen_event.rs  mod.rs
src/macros/: attached_modifier.rs  mod.rs
src/nodes/: bold.rs  document.rs  heading.rs  inline_code.rs  italic.rs  link.rs  list.rs  list_container.rs  list_item.rs  mod.rs  paragraph.rs  paragraph_segment.rs  spoiler.rs  strikethrough.rs  subscript.rs  superscript.rs  underline.rs
