[package]
name = "norg-reader"
version = "0.1.0"
edition = "2021"
description = "A rust app to view your .norg files"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.3", features = ["derive"] }
dioxus = { version = "0.5.0", features = ["desktop", "mobile", "router"] }
dioxus-desktop = "0.5.0"
itertools = "0.12.1"
tree-sitter = "0.20.9"
tree-sitter-norg = "0.1.1"

[dev-dependencies]
cc = "*"

[package.metadata.bundle]
name = "NorgReader"
identifier = "com.andreadev.norgreader"
version = "0.0.1"
copyright = "Copyright (c) Andrea Dragotta 2024. All rights reserved."
category = "Productivity"
short_description = "Open .norg files in a cross-platform app"
long_description = """
This app allows you to open your norg files in a visual application instead of neovim.
"""
